my social links

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             </ul>
         </nav>
         <div class="header__social__media">
-            <a class="header__icon__link" href="#">
+            <a class="header__icon__link" href="https://www.linkedin.com/in/sofidev/" target="_blank" rel="nofollow no-referrer noopenner">
                 <i class="fa-brands fa-linkedin fa-beat"></i>
             </a>
-            <a class="header__icon__link" href="#">
+            <a class="header__icon__link" href="https://github.com/SofiDevO/template-hamburger-menu" target="_blank" rel="nofollow no-referrer noopenner">
                 <i class="fa-brands fa-github-alt fa-beat"></i>
             </a>
             <a class="header__icon__link" href="#">
