Updates and fixeng errors

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <!-- styles -->
     <link rel="stylesheet" href="./assets/styles/root.css">
     <link rel="stylesheet" href="./assets/styles/hamburger-menu.css">
-    <link rel="stylesheet" href="./assets/styles/header.css
-    ">
+    <link rel="stylesheet" href="./assets/styles/header.css">
+    <link rel="stylesheet" href="./assets/styles/contenido-example.css">
+
 </head>
 <body>
     <header class="header">
@@ -63,16 +64,53 @@
     <aside id="panel" class="panel">
         <nav class="menu-hamburger">
             <ul>
-                <li class="menu__list__hamburger"><a href="#" class="header__menu-link">Home</a></li>
-                <li class="menu__list__hamburger"><a href="#" class="header__menu-link">About me</a> </li>
-                <li class="menu__list__hamburger"><a href="#" class="header__menu-link">skills</a></li>
-                <li class="menu__list__hamburger"><a href="#" class="header__menu-link">Hobbies</a></li>
-                <li class="menu__list__hamburger"><a href="#" class="header__menu-link">Contact</a></li>
+                <li class="menu__list__hamburger "><a href="#home" class="header__menu-link hamburger">Home</a></li>
+                <li class="menu__list__hamburger"><a href="#about" class="header__menu-link hamburger">About me</a> </li>
+                <li class="menu__list__hamburger"><a href="#skills" class="header__menu-link hamburger">skills</a></li>
+                <li class="menu__list__hamburger"><a href="#hoobies" class="header__menu-link hamburger">Hobbies</a></li>
+                <li class="menu__list__hamburger"><a href="#contact" class="header__menu-link hamburger">Contact</a></li>
             </ul>
         </nav>
     </aside>
     <main>
         <!-- Insert your site content -->
+        <section id="home" class="section">
+            <h2 >Home</h2>
+            <div class="texto__example">
+                <p class="contenido__ejemplo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus nostrum eum accusantium porro maxime. Atque assumenda temporibus eveniet similique voluptatibus facere, nihil optio illo magni quidem qui, a delectus voluptas?
+                Eveniet ex nam animi impedit! Consequatur aut officiis facere, vitae voluptatem, iure animi fugit recusandae commodi voluptatum aperiam quas ipsum! Rem est atque neque ipsa exercitationem quis excepturi ipsum nam.</p>
+            </div>
+        </section>
+        <section id="about" class="section">
+            <h2 >About me</h2>
+            <div class="texto__example">
+                <p class="contenido__ejemplo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus nostrum eum accusantium porro maxime. Atque assumenda temporibus eveniet similique voluptatibus facere, nihil optio illo magni quidem qui, a delectus voluptas?
+                Eveniet ex nam animi impedit! Consequatur aut officiis facere, vitae voluptatem, iure animi fugit recusandae commodi voluptatum aperiam quas ipsum! Rem est atque neque ipsa exercitationem quis excepturi ipsum nam.</p>
+            </div>
+        </section>
+        <section id="skills" class="section">
+            <h2 >Skills</h2>
+            <div class="texto__example">
+                <p class="contenido__ejemplo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus nostrum eum accusantium porro maxime. Atque assumenda temporibus eveniet similique voluptatibus facere, nihil optio illo magni quidem qui, a delectus voluptas?
+                Eveniet ex nam animi impedit! Consequatur aut officiis facere, vitae voluptatem, iure animi fugit recusandae commodi voluptatum aperiam quas ipsum! Rem est atque neque ipsa exercitationem quis excepturi ipsum nam.</p>
+            </div>
+        </section>
+        <section id="hoobies" class="section">
+            <h2 >Hobbies</h2>
+            <div class="texto__example">
+                <p class="contenido__ejemplo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus nostrum eum accusantium porro maxime. Atque assumenda temporibus eveniet similique voluptatibus facere, nihil optio illo magni quidem qui, a delectus voluptas?
+                Eveniet ex nam animi impedit! Consequatur aut officiis facere, vitae voluptatem, iure animi fugit recusandae commodi voluptatum aperiam quas ipsum! Rem est atque neque ipsa exercitationem quis excepturi ipsum nam.</p>
+            </div>
+        </section>
+        <section id="contact" class="section">
+            <h2 >Contact</h2>
+            <div class="texto__example">
+                <p class="contenido__ejemplo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus nostrum eum accusantium porro maxime. Atque assumenda temporibus eveniet similique voluptatibus facere, nihil optio illo magni quidem qui, a delectus voluptas?
+                Eveniet ex nam animi impedit! Consequatur aut officiis facere, vitae voluptatem, iure animi fugit recusandae commodi voluptatum aperiam quas ipsum! Rem est atque neque ipsa exercitationem quis excepturi ipsum nam.</p>
+            </div>
+        </section>
+
+
     </main>
                 
     <script type="module" src="./js/modules.js"></script>
