:zap: Se mejora disenho, se arregla menu.js

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             </div>
             <nav class="header__nav__menu panel" id="panel">
                 <ul>
-                    <li class="menu__list"><a href="#" class="header__menu-link">Home</a></li>
-                    <li class="menu__list"><a href="#" class="header__menu-link">About me</a></li>
-                    <li class="menu__list"><a href="#" class="header__menu-link">Skills</a></li>
-                    <li class="menu__list"><a href="#" class="header__menu-link">Hobbies</a></li>
-                    <li class="menu__list"><a href="#" class="header__menu-link">Contact</a></li>
+                    <li class="menu__list"><a href="#home" class="header__menu-link">Home</a></li>
+                    <li class="menu__list"><a href="#about" class="header__menu-link">About me</a></li>
+                    <li class="menu__list"><a href="#skills" class="header__menu-link">Skills</a></li>
+                    <li class="menu__list"><a href="#hoobies" class="header__menu-link">Hobbies</a></li>
+                    <li class="menu__list"><a href="#contact" class="header__menu-link">Contact</a></li>
                 </ul>
             </nav>
             <div class="header__social__media">
